system_tests/syntax_error/syntax_error.rss
$Resources
	Парикмахерские Парикмахерская = new Парикмахерские(Свободен, 0, 0);
	Парикмахерская.trace();
	Парикмахерские Парикмахерская_еще = new Парикмахерские(Свободен, 0, 0);
	Парикмахерская_еще.trace();
$End